<resources>
    <string name="app_name">Calls</string>
    <string name="external_dir">GetSignature</string>
    <string name="broadcast_msgs">Broadcast Messages</string>
    <string name="status_summary">Status Summary</string>
    <string name="material_monitoring">Material Monitoring</string>
    <string name="sales_report">Sales Report</string>
    <string name="call_report">Call Report</string>
    <string name="doctor_information">Doctors Information</string>
    <string name="mcp">Master Coverage Plan</string>
    <string name="acp">Actual Coverage Plan</string>
    <string name="quick_sign">Quick Sign</string>
    <string name="declared_missed">Declared Missed</string>
    <string name="incidental_call">Incidental Call</string>
    <string name="call_reach">Call Reach</string>
    <string name="call_rate">Call Rate</string>
    <string name="average">Average</string>
    <string name="image">Image</string>
    <string name="proceed">Proceed</string>
    <string name="header">Please select from one of the reasons below to use for the entire list of doctors:</string>

    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>

    <string name="S">S</string>
    <string name="L">L</string>
    <string name="P">P</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="total">Total</string>
    <string name="content">Content</string>
    <string name="product">PRODUCT</string>
    <string name="no_data_available">No data available</string>
    <string name="search_doctor">Search Doctor…</string>
    <string name="no_matching_records">No matching records were found</string>

    <!--BDM-->
    <string name="actual_call">Actual Call</string>
    <string name="itinerary">Itinerary</string>
    <string name="developmental_plan">Developmental Plan</string>
    <string name="pmr">PMR</string>
    <string name="mcp_approval">MCP Approval</string>
    <string name="pmr_coverage">PMR Coverage</string>

    <array name="color_coded_circles">
        <item>Missed Call</item>
        <item>Incident Call</item>
        <item>Recovered Call</item>
        <item>Signed Call</item>
        <item>Sent Call</item>
    </array>

    <array name="images_color_coded_circles">
        <item>@mipmap/ic_missed_call</item>
        <item>@mipmap/ic_incidental_call</item>
        <item>@mipmap/ic_recovered_call</item>
        <item>@mipmap/ic_signed_call</item>
        <item>@mipmap/ic_actual_covered_call</item>
    </array>
</resources>
