<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".3"
        android:baselineAligned="false"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#A25063" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#413B41"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#F6F2EC"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="#F6F2EC" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/quick_sign"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight=".2"
                            android:src="@mipmap/quick_sign" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/quick_sign"
                            android:textColor="#F6F2EC"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/actual_coverage_plan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight=".2"
                            android:src="@mipmap/acp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/acp"
                            android:textColor="#F6F2EC"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/master_coverage_plan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight=".2"
                            android:src="@mipmap/mcp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/mcp"
                            android:textColor="#F6F2EC"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/doctors_information"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight=".2"
                            android:src="@mipmap/doctors" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/doctor_information"
                            android:textColor="#F6F2EC"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/call_report"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight=".2"
                            android:src="@mipmap/call_report" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/call_report"
                            android:textColor="#F6F2EC"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/sales_report"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight=".2"
                            android:src="@mipmap/sales_report" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/sales_report"
                            android:textColor="#F6F2EC"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/material_monitoring"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight=".2"
                            android:src="@mipmap/material_monitoring" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/material_monitoring"
                            android:textColor="#F6F2EC"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/status_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight=".2"
                            android:src="@mipmap/status_summary" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/status_summary"
                            android:textColor="#F6F2EC"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".7"
        android:background="#F6F2EC"
        android:baselineAligned="false"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/toolbar_shadow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/broadcast_msgs"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/listBroadcastMessage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@null"
                    android:dividerHeight="-20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>