<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".3"
        android:baselineAligned="false"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#A25063" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#413B41"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#F6F2EC"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="#F6F2EC" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/actual_call"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight=".2"
                            android:contentDescription="@string/actual_call"
                            android:src="@mipmap/quick_sign" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/actual_call"
                            android:textColor="#F6F2EC"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/itinerary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight=".2"
                            android:contentDescription="@string/itinerary"
                            android:src="@mipmap/mcp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/itinerary"
                            android:textColor="#F6F2EC"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/developmental_plan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight=".2"
                            android:contentDescription="@string/developmental_plan"
                            android:src="@mipmap/developmental_plan" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/developmental_plan"
                            android:textColor="#F6F2EC"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/pmr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight=".2"
                            android:contentDescription="@string/pmr"
                            android:src="@mipmap/pmr" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/pmr"
                            android:textColor="#F6F2EC"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/mcp_approval"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight=".2"
                            android:contentDescription="@string/mcp_approval"
                            android:src="@mipmap/mcp_approval" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/mcp_approval"
                            android:textColor="#F6F2EC"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/status_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight=".2"
                            android:contentDescription="@string/status_summary"
                            android:src="@mipmap/status_summary" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/status_summary"
                            android:textColor="#F6F2EC"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/pmr_coverage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight=".2"
                            android:contentDescription="@string/pmr_coverage"
                            android:src="@mipmap/pmr_coverage" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="@string/pmr_coverage"
                            android:textColor="#F6F2EC"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/export_database"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight=".2"
                            android:contentDescription="@string/status_summary"
                            android:src="@mipmap/ic_settings" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight=".8"
                            android:gravity="center_vertical"
                            android:text="Export Database"
                            android:textColor="#F6F2EC"
                            android:textSize="17sp" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".7"
        android:background="#F6F2EC"
        android:baselineAligned="false"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/toolbar_shadow" />

    </LinearLayout>
</LinearLayout>